# tooloxide

./: .gitignore  .prettierrc.json  Cargo.toml  README.md  build_wasm.sh  bun.lockb  eslint.config.mjs  package.json  svelte.config.js  tailwind.config.ts
api/: search.rs
project.inlang/: project_id  settings.json
rust/: hello_world.rs
rust/add/: Cargo.toml
rust/alert/: Cargo.toml
rust/alert/src/: lib.rs
src/: app.css  hooks.server.ts
src/lib/: api.d.ts  dark_mode.svelte.ts  stream.ts
src/lib/components/: Search.svelte  ThemeToggle.svelte  theme-toggle.svelte
src/lib/components/ui/command/: command-dialog.svelte  command-input.svelte
src/routes/: +error.svelte  +layout.svelte  +page.svelte
