[package]
name = "tooloxide-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde = "1.0.215"
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = { version = "1" }
url = "2.5.4"

[lib]
path = "rust/util.rs"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "hello"
path = "api/hello.rs"

[[bin]]
name = "search"
path = "api/search.rs"

[workspace]
members = ["rust/add"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hongmeng Zhai <zhaihongmeng@gmail.com>"]

[workspace.dependencies]
wasm-bindgen = "0.2.97"
console_error_panic_hook = { version = "0.1.7" }
